--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
 	<title>Amigo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!--Integration
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" /> -->
 
-	<!-- <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet"> -->
-	
 
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/icomoon.css">
@@ -51,10 +44,9 @@
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="about.html">About Covid 19</a></li>
-						<li><a href="#">Services</a></li>
 						<li><a href="#">Fund Raiser</a></li>
-						<li><a href="#">How To Stay Safe</a></li>
-						<li><a href="#">About the Developers</a></li>
+						<li><a href="#gtco-portfolio">How To Stay Safe</a></li>
+						<li><a href="#gtco-products">About Team</a></li>
 					</ul>
 				</div>
 			</div>
@@ -64,14 +56,14 @@
 
 	<header id="gtco-header" class="gtco-cover" role="banner" style="background-image:url(images/img_bg_1.jpg);">
 		<div class="overlay"></div>
-		<div class="gtco-container">
+		<div class="gtco-container" id="header">
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0 text-left">
 					<div class="display-t">
 						<div class="display-tc">
 							<h1 class="animate-box" data-animate-effect="fadeInUp">Coronavirus (COVID-19) Health Alert</h1>
 							<h2 class="animate-box" data-animate-effect="fadeInUp">Help Stop the Spread</h2>
-							<p class="animate-box" data-animate-effect="fadeInUp"><a href="#" class="btn btn-white btn-lg btn-outline">Learn More</a></p>
+							<p class="animate-box" data-animate-effect="fadeInUp"><a href="about.html" class="btn btn-white btn-lg btn-outline">Learn More</a></p>
 						</div>
 					</div>
 				</div>
@@ -109,7 +101,7 @@
 						</span>
 						<h3>About the Team</h3>
 						<p>Developer Info</p>
-						<p><a href="#" class="btn btn-white btn-outline">Learn More</a></p>
+						<p><a href="#gtco-products" class="btn btn-white btn-outline">Learn More</a></p>
 					</div>
 				</div>
 			</div>
