Basic structure of website

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="about.html">About Covid 19</a></li>
-						<li><a href="#">Fund Raiser</a></li>
+						<li><a href="fund.html">Fund Raiser</a></li>
 						<li><a href="#gtco-portfolio">How To Stay Safe</a></li>
 						<li><a href="#gtco-products">About Team</a></li>
 					</ul>
@@ -81,7 +81,7 @@
 						</span>
 						<h3>Maintain Social Distance</h3>
 						<p>This provides ways to keep your distance from others and help stop the spread of COVID-19. </p>
-						<p><a href="#" class="btn btn-white btn-outline">Learn More</a></p>
+						<p><a href="social.html" class="btn btn-white btn-outline">Learn More</a></p>
 					</div>
 				</div>
 				<div class="feature feature-2 animate-box" data-animate-effect="fadeInUp">
@@ -138,6 +138,28 @@
 							<p>It helps in telling what all should be done during this pandemic and how the society can help to finish this pandemic </p>
 						</div>
 					</div>
+				
+					<div class="row">
+						<div class="col-md-3 col-sm-6">
+							<div class="feature-center animate-box" data-animate-effect="fadeIn">
+								<span class="icon">
+									<i class="ti-ruler-pencil"></i>
+								</span>
+								<h3>Patient Triggring and Possibility for local area infections</h3>
+								<p> This helps us in identifying the hotspots of coronavirus affected area that currently are present in Australia </p>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="col-md-3 col-sm-6">
+								<div class="feature-center animate-box" data-animate-effect="fadeIn">
+									<span class="icon">
+										<i class="ti-face-smile"></i>
+									</span>
+									<h3>Identifying WHO/WHY/WHEN to test the patients</h3>
+									<p>It helps us in recognizing the need for testing different patients.</p>
+								</div>
+							</div>
 					</center>
 			</div>
 		</div>
@@ -155,16 +177,16 @@
 			<div class="row row-pb-md">
 				<div class="col-md-12">
 					<ul id="gtco-portfolio-list">
-						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_1.jpg); "> 
-							<a href="#" class="color-1">
+						<li class="two-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/c1.jpg); "> 
+							<a href="dos.html" class="color-1">
 								<div class="case-studies-summary">
 									<span>Do's and Dont's </span>
 									<h2>Things we should do to minimise the risk of Covid19</h2>
 								</div>
 							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/img_2.jpg); ">
-							<a href="#" class="color-2">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/c4.jpg); ">
+							<a href="safety.html" class="color-2">
 								<div class="case-studies-summary">
 									<span>Saftey Measures</span>
 									<h2>How to protect yourself from this pandemic</h2>
