--- a/safety.html
+++ b/safety.html
@@ -61,8 +61,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc">
-							<h1 class="animate-box" data-animate-effect="fadeInUp">Coronavirus Pandemic</h1>
-							<h2 class="animate-box" data-animate-effect="fadeInUp">More About Covid 19</h2>
+							<h1 class="animate-box" data-animate-effect="fadeInUp">Safety Measures that need to be taken care of during this pandemic</h1>
+							
 						</div>
 					</div>
 				</div>
@@ -76,27 +76,14 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 					<h2></h2>
-					<p>The World Health Organization has announced that COVID-19 is a pandemic. Find out how we are monitoring and responding to the outbreak, how you can help slow the spread of COVID-19 in Australia, and what to do if you have symptoms</p>
+					<p>The World Health Organization has announced that COVID-19 is a pandemic.There are specific Safety Measures that needs attention during this period.</p>
+					<iframe width="750" height="500"
+					src="https://www.youtube.com/embed/K-6pjI58Ajs">
+			</iframe>
 				</div>
 			</div>
 
-			<div class="row row-pb-md">
-				<div class="col-md-6">
-					<p>Coronaviruses are a large family of viruses that cause respiratory infections. These can range from the common cold to more serious diseases.
 
-						COVID-19 is a disease caused by a new form of coronavirus. It was first reported in December 2019 in Wuhan City in China.
-						
-						Other coronaviruses include Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS).</p>
-				</div>
-				<div class="col-md-6">
-					<p>The virus can spread from person to person through:
-
-						close contact with an infectious person (including in the 24 hours before they had symptoms)
-						contact with droplets from an infected person’s cough or sneeze
-						touching objects or surfaces (like doorknobs or tables) that have droplets from an infected person, and then touching your mouth or face
-						COVID-19 is a new disease, so there is no existing immunity in our community. This means that COVID-19 could spread widely and quickly.</p>
-				</div>
-			</div>
 
 			<div class="row">
 				<div class="col-md-12">
@@ -105,22 +92,26 @@
 				<div class="col-md-12">
 					<div class="owl-carousel owl-carousel-fullwidth">
 						<div class="item">
-							<img src="images/c1.jpg" alt="">
+							<img src="images/sa1.png" alt="">
 						</div>
 						<div class="item">
-							<img src="images/s2.jpg" alt="">
+							<img src="images/sa2.png" alt="">
 						</div>
 						<div class="item">
-							<img src="images/c3.jpg" alt="">
+							<img src="images/sa3.png" alt="">
+
 						</div>
 						<div class="item">
-							<img src="images/c4.jpg" alt="">
+							<img src="images/sa4.png" alt="">
+
 						</div>
 						<div class="item">
-							<img src="images/c5.jpg" alt="">
+							<img src="images/sa5.png" alt="">
+
 						</div>
 						<div class="item">
-							<img src="images/c6.jpeg" alt="">
+							<img src="images/sa6.png" alt="">
+
 						</div>
 					</div>
 				</div>
