--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						</span>
 						<h3>Take a self Assessment Test</h3>
 						<p>This test helps you to check whether you are at low/moderate/high risk from this pandemic.</p>
-						<p><a href="#" class="btn btn-white btn-outline">Learn More</a></p>
+						<p><a href="chat.html" class="btn btn-white btn-outline">Learn More</a></p>
 					</div>
 				</div>
 				<div class="feature feature-3 animate-box" data-animate-effect="fadeInUp">
