--- a/index.html
+++ b/index.html
@@ -213,16 +213,16 @@
 			<div class="row animate-box">
 				<div class="owl-carousel owl-carousel-carousel">
 					<div class="item">
-						<img src="images/img_1.jpg" alt="Sameer Saxena">
+						<img src="images/sameer.jpg" alt="Sameer Saxena" height="350px">
 					</div>
 					<div class="item">
-						<img src="images/img_2.jpg" alt="Avinash Rao">
+						<img src="images/avi.jpg" alt="Avinash Rao" height="350px">
 					</div>
 					<div class="item">
-						<img src="images/img_3.jpg" alt="Amar Babuta">
+						<img src="images/amar.jpg" alt="Amar Babuta" height="350px">
 					</div>
 					<div class="item">
-						<img src="images/img_4.jpg" alt="Samir Patel">
+						<img src="images/samir.jpg" alt="Samir Patel" height="350px">
 					</div>
 				</div>
 			</div>
