--- a/chat.html
+++ b/chat.html
@@ -61,8 +61,8 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc">
-							<h1 class="animate-box" data-animate-effect="fadeInUp">Coronavirus Pandemic</h1>
-							<h2 class="animate-box" data-animate-effect="fadeInUp">More About Covid 19</h2>
+							<h1 class="animate-box" data-animate-effect="fadeInUp">Self-Assessment Test</h1>
+							<h2 class="animate-box" data-animate-effect="fadeInUp">More About You</h2>
 						</div>
 					</div>
 				</div>
