--- a/index.html
+++ b/index.html
@@ -213,16 +213,16 @@
 			<div class="row animate-box">
 				<div class="owl-carousel owl-carousel-carousel">
 					<div class="item">
-						<img src="images/sameer.jpg" alt="Sameer Saxena" height="350px">
+						<img src="images/sameer.png" alt="Sameer Saxena" height="350px">
 					</div>
 					<div class="item">
-						<img src="images/avi.jpg" alt="Avinash Rao" height="350px">
+						<img src="images/avinash.png" alt="Avinash Rao" height="350px">
 					</div>
 					<div class="item">
-						<img src="images/amar.jpg" alt="Amar Babuta" height="350px">
+						<img src="images/amar.png" alt="Amar Babuta" height="350px">
 					</div>
 					<div class="item">
-						<img src="images/samir.jpg" alt="Samir Patel" height="350px">
+						<img src="images/samir.png" alt="Samir Patel" height="350px">
 					</div>
 				</div>
 			</div>
